--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   "description": "Full-Stack Web App for Viewing League of Legends summoner profiles",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./server/index.js localhost 8080"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.3.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "flatted": "^3.2.7",
+    "node-fetch": "^3.3.0"
+  }
 }
