--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mantine/core": "^5.10.3",
+    "@mantine/form": "^5.10.3",
+    "@mantine/hooks": "^5.10.3",
+    "@mantine/modals": "^5.10.3",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.8",
     "axios": "^1.3.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "flatted": "^3.2.7",
-    "node-fetch": "^3.3.0"
+    "lol-champs": "^1.1.4",
+    "node-fetch": "^3.3.0",
+    "react-spinners": "^0.13.8"
   }
 }
